bk_ida/gccida/g2/construct_container
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/construct_container/src/i386.c:2423:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/construct_container/src/i386.c:2434:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class *v12; // r13 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/construct_container/src/i386.c:2437:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class v16; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/construct_container/src/i386.c:2442:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/construct_container/src/i386.c:2447:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v26; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/construct_container/src/i386.c:2450:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v29; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/construct_container/src/i386.c:2460:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode tmpmodea; // [rsp+18h] [rbp-80h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/construct_container/src/i386.c:2463:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class classa[4]; // [rsp+30h] [rbp-68h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/construct_container/src/i386.c:2488:18: error: use of undeclared identifier 'off_670ADF'
fprintf( stderr, off_670ADF, x86_64_reg_class_name[v13]); 
                 ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/construct_container/src/obj/i386.o] Error 1
